# caption-inspector

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  NOTICE  README.md  travis_ffmpeg_install.sh
docs/: GlobalCtrlCodes.docx  decodeCCD.md  decoded608.md  decoded708.md  index.html
docs/html/: docs-page.html  humans.txt  index.html
docs/html/assets/css/: _colors.scss  styles.css  styles.css.map  styles.scss  theme.css  theme.css.map
docs/html/assets/data/: commands.json  windowCommands.json
docs/html/assets/js/: clouds.js  docs.js  highlight.min.js
docs/html/assets/plugins/: jquery.quicksearch.js
docs/html/assets/scripts/: docs.js  jquery.sticky.js  main.js  raf.js  search.js  sticky.js
docs/html/assets/scss/: config.codekit3  theme.css  theme.css.map  theme.scss
docs/html/assets/scss/bootstrap/scss/: _variables.scss  bootstrap-grid.css  bootstrap-grid.css.map  bootstrap-reboot.css  bootstrap-reboot.css.map
docs/html/assets/scss/theme/: _base.scss  _circle-menu.scss  _colors.scss  _docs.scss  _menus.scss  styles.css  styles.scss
include/: autodetect_file.h  buffer_utils.h  captions_file.h  cc_data_output.h  cc_utils.h  context.h  debug.h  dtvcc_decode.h  dtvcc_output.h  external_adaptor.h  line21_decode.h  line21_output.h  mcc_decode.h  mcc_encode.h  mcc_output.h  mov_file.h  mpeg_file.h  output_utils.h  pipeline_structs.h  pipeline_utils.h  scc_encode.h  smpte_encode.h  smpte_output.h  types.h  version.h
python/: cshim.py
src/: Makefile  main.c
src/sink/: cc_data_output.c  dtvcc_output.c  line21_output.c  mcc_output.c  smpte_output.c
src/source/: mcc_file.c  mov_file.c  mpeg_file.c  scc_file.c
src/utils/: autodetect_file.c  buffer_utils.c  cc_utils.c  debug.c  external_adaptor.c  output_utils.c  pipeline_utils.c  version.c
src/xform/: dtvcc_decode.c  line21_decode.c  mcc_decode.c  mcc_encode.c  scc_encode.c  smpte_encode.c
test/: Dockerfile  Makefile  itest__buffers.c  itest__pipeline.c  python_test_shim.c  test_engine.c  test_engine.h  utest__buffer_utils.c  utest__cc_utils.c  utest__external_adaptor.c  utest__output_utils.c  utest__pipeline_utils.c
test/media/: BigBuckBunny_160x90-24fps.mov  BigBuckBunny_256x144-24fps-C1.608  BigBuckBunny_256x144-24fps-C3.608  BigBuckBunny_256x144-24fps-S1.708  BigBuckBunny_256x144-24fps-S2.708  BigBuckBunny_256x144-24fps-S3.708  BigBuckBunny_256x144-24fps-S4.708  BigBuckBunny_256x144-24fps-S5.708  BigBuckBunny_256x144-24fps-S6.708  BigBuckBunny_256x144-24fps.ccd  BigBuckBunny_256x144-24fps.inf  BigBuckBunny_256x144-24fps.mcc  BigBuckBunny_256x144-24fps.ts  LoremIpsum.txt  NightOfTheLivingDead-C1.608  NightOfTheLivingDead-S1.708  NightOfTheLivingDead.mcc  Plan9fromOuterSpace-C1.608  Plan9fromOuterSpace.scc
test/python/: Makefile  system_test.py  test__autodetect_file.py  test__external_adaptor.py  test__output_utils.py  test_engine.py
